solved the align problem with logo

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
     width: 100%;
     overflow: hidden;
     display: flex;
+    flex-direction: row;
     margin-top: 70px;
     align-items: center;
 }
@@ -97,7 +98,7 @@ body {
 .login-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     float: none;
     width: 80%;
     height: auto;
@@ -107,45 +108,41 @@ body {
     background-color: rgb(255, 255, 255);
     margin-top: 10%;
     margin-inline: 10%;
-    align-items: center;
+    min-width: 266px;
 }
 
 .div-logo {
-    width: 40%;
+    width: 50%;
+    display: flex;
     height: fit-content;
     margin-top: 10%;
     justify-content: space-around;
+    min-width: 200px;
 }
 
 .div-form {
-    width: 50%;
+    width: 80%;
     height: fit-content;
-    margin-right: 10%;
     padding-bottom: 10%;
     margin-top: 10%;
 }
 
 .div-logo img{
-    width: auto;
-    height: auto;
     max-width: 200px;
     max-height: 69px;
-    padding-left: 10%;
+    
     float: none;
-    align-self: center;
 }
-@media screen and (max-width: 1500px) {
-    .div-logo,
-    .div-form{
-        width: 90%;
+/* @media screen and (max-width: 500px) {
+    .left,
+    .right{
+        width: 20%;
     }
-}
+} */
 
 .login-form fieldset {
     border-radius: 5px;
-    height: auto;
     padding: 2px 0 0 7px;
-    margin-left: 10%;
     color: rgb(34, 33, 32);
     border-style:solid;
     border-width: thin;
@@ -155,11 +152,10 @@ body {
 .login-form fieldset input {
     border-radius: 2px;
     border-style: hidden;
-    width:max-content;
     margin-left: -7px;
     width: 100%;
     margin-bottom: 5px;
-    padding-left: 5px;
-    border-color: #FFFFFF;
-    
+    padding-left: 5px;    
 }
+
+
